--- a/main/gui/CMakeLists.txt
+++ b/main/gui/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
-set(PROJECT_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} Qt5::Widgets Qt::Core)
+set(GUI_PROJECT_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} Qt5::Widgets Qt::Core)
 
 file(GLOB_RECURSE GUI_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
 set(GUI_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
