--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,6 +28,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
 
 message("MAIN PROJECT")
+project(Main VERSION 1.0 DESCRIPTION "Main Description" LANGUAGES CXX)
 
 find_package(Threads REQUIRED)
 message("CMAKE_THREAD_LIBS_INIT : " ${CMAKE_THREAD_LIBS_INIT})
