--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -52,7 +52,7 @@ jobs:
       id: strings
       shell: bash
       run: |
-        echo "build-output-dir=${{ github.workspace }}/main/build" >> "$GITHUB_OUTPUT"
+        echo "build-output-dir=${{ github.workspace }}/main/build" >> "$GITHUB_OUTPUT" && sudo apt-get install libboost-all-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
